# freeze_attributes

./: .pre-commit-config.yaml  README.md  setup.cfg  spell_dict.txt
freeze_attributes/: __init__.py  freeze_attributes.py
src/: freeze_attributes.py
