[metadata]
name = freeze_attributes
version = 1.1.0
author = FreezeAttributes
description = Freeze class attributes after init
long-description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/dand-oss/freeze_attributes
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers

[options]
package_dir =
    =src
py_modules = freeze_attributes
python_requires = >=3.0

[options.packages.find]
where=src
